--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "qs": "^6.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-html-parser": "^2.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^2.1.4"
